// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders additional class name 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: 0px 1px 0px rgb(25,37,50,0.08);
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  color: #283848;
  background-color: #ffffff;
  border-color: #c3cfd5;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
  border-radius: 0;
  margin-right: -1px;
  z-index: 1;
}

.emotion-1:hover {
  background-color: #f7f9fa;
}

.emotion-1:active,
.emotion-1:active:hover {
  background-color: #e5ebed;
}

.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #e5ebed;
}

.emotion-1:first-child {
  border-bottom-left-radius: 6px;
  border-top-left-radius: 6px;
}

.emotion-1:last-child {
  border-bottom-right-radius: 6px;
  border-top-right-radius: 6px;
  margin-right: 0;
}

.emotion-1:focus {
  z-index: 2;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0;
}

.emotion-2 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  fill: currentColor;
}

<div
  class="additional-class emotion-6"
  data-test-id="cf-ui-button-group"
>
  <button
    class="emotion-1"
    type="button"
  >
    <span
      class="emotion-0"
    >
      Button
    </span>
  </button>
  <button
    class="emotion-1"
    type="button"
  >
    <span
      class="emotion-3"
    >
      <svg
        class="emotion-2"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
        />
      </svg>
    </span>
    <span
      class="emotion-0"
    />
  </button>
</div>
`;

exports[`ButtonGroup renders collapsed buttons 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-1 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: 0px 1px 0px rgb(25,37,50,0.08);
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  color: #283848;
  background-color: #ffffff;
  border-color: #c3cfd5;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
  border-radius: 0;
  margin-right: -1px;
  z-index: 1;
}

.emotion-1:hover {
  background-color: #f7f9fa;
}

.emotion-1:active,
.emotion-1:active:hover {
  background-color: #e5ebed;
}

.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #e5ebed;
}

.emotion-1:first-child {
  border-bottom-left-radius: 6px;
  border-top-left-radius: 6px;
}

.emotion-1:last-child {
  border-bottom-right-radius: 6px;
  border-top-right-radius: 6px;
  margin-right: 0;
}

.emotion-1:focus {
  z-index: 2;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0;
}

.emotion-2 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  fill: currentColor;
}

<div
  class="emotion-6"
  data-test-id="cf-ui-button-group"
>
  <button
    class="emotion-1"
    type="button"
  >
    <span
      class="emotion-0"
    >
      Button
    </span>
  </button>
  <button
    class="emotion-1"
    type="button"
  >
    <span
      class="emotion-3"
    >
      <svg
        class="emotion-2"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
        />
      </svg>
    </span>
    <span
      class="emotion-0"
    />
  </button>
</div>
`;

exports[`ButtonGroup renders separated buttons 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0;
}

.emotion-2 {
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #2D64B3;
  height: 18px;
  width: 18px;
  fill: currentColor;
}

.emotion-1 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: 0px 1px 0px rgb(25,37,50,0.08);
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  color: #283848;
  background-color: #ffffff;
  border-color: #c3cfd5;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
}

.emotion-1:hover {
  background-color: #f7f9fa;
}

.emotion-1:active,
.emotion-1:active:hover {
  background-color: #e5ebed;
}

.emotion-1:focus {
  box-shadow: 0px 0px 0px 3px #e5ebed;
}

.emotion-1:first-child {
  margin-left: 0;
}

.emotion-1:last-child {
  margin-right: 0;
}

<div
  class="emotion-6"
  data-test-id="cf-ui-button-group"
>
  <button
    class="emotion-1"
    type="button"
  >
    <span
      class="emotion-0"
    >
      Button
    </span>
  </button>
  <button
    class="emotion-1"
    type="button"
  >
    <span
      class="emotion-3"
    >
      <svg
        class="emotion-2"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
        />
      </svg>
    </span>
    <span
      class="emotion-0"
    />
  </button>
</div>
`;
